--- a/Avaliação_Individual_RA3.ipynb
+++ b/Avaliação_Individual_RA3.ipynb
@@ -209,12 +209,12 @@
         "print(\"Área sob a curva: \", area)\n"
       ],
       "metadata": {
-        "id": "Web2frziFdAL",
-        "outputId": "6d540856-eeff-4946-c64a-3f433407d3cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 489
-        }
+        },
+        "id": "Web2frziFdAL",
+        "outputId": "6d540856-eeff-4946-c64a-3f433407d3cc"
       },
       "execution_count": 1,
       "outputs": [
@@ -339,11 +339,11 @@
         "print(\"A área limitada pelas duas curvas é:\", total_area.evalf())\n"
       ],
       "metadata": {
-        "id": "MahUERAeRXZi",
-        "outputId": "760b2ced-0806-4a8b-ff6f-ee7f83957433",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MahUERAeRXZi",
+        "outputId": "760b2ced-0806-4a8b-ff6f-ee7f83957433"
       },
       "execution_count": 5,
       "outputs": [
@@ -452,7 +452,7 @@
         "\n",
         "aplicando o $ \\frac{1}{3}$ da média temos que\n",
         "\n",
-        "$$ \\frac{8}{3}$$"
+        "$$8 *\\frac{1}{3} =  \\frac{8}{3}$$"
       ],
       "metadata": {
         "id": "fwRMIxwTSGn1"
